[gd_scene load_steps=5 format=3 uid="uid://bngfghgm1lhwr"]

[ext_resource type="Script" uid="uid://c8vt1kvoocct4" path="res://cutscenes/Transitions/chapter_1_question.gd" id="1_b1rft"]
[ext_resource type="PackedScene" uid="uid://spmgx5dgdnj5" path="res://sprites/Eden/eden.tscn" id="2_mgm23"]
[ext_resource type="FontFile" uid="uid://cg0depop5oab6" path="res://fonts/AlegreyaSans-Black.ttf" id="2_s6lcm"]
[ext_resource type="PackedScene" uid="uid://bjm2suicq3gx7" path="res://dialogs/choice_button.tscn" id="4_yq2d0"]

[node name="Chapter1Question" type="Node2D"]
script = ExtResource("1_b1rft")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Eden" parent="." instance=ExtResource("2_mgm23")]
position = Vector2(900, 800)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 182.0
offset_right = 1730.0
offset_bottom = 403.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_s6lcm")
theme_override_font_sizes/font_size = 64
text = "When our protagonist finally caught up, tired and out of breath, he turned towards H, panting. The girl turned towards him cautiously waiting for him to talk."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ChoiceButtonE1" parent="." instance=ExtResource("4_yq2d0")]
offset_left = 600.0
offset_top = 430.0
offset_right = 1588.0
offset_bottom = 471.0
theme_override_font_sizes/font_size = 32
text = "Welp, that was a good workout, but I gotta get going, see you around (Leave)"

[node name="ChoiceButtonMO" parent="." instance=ExtResource("4_yq2d0")]
offset_left = 650.0
offset_top = 580.0
offset_right = 1720.0
offset_bottom = 621.0
theme_override_font_sizes/font_size = 32
text = "I don’t think they saw us turn here… Who are we running from exactly? (Oblivious)"

[node name="ChoiceButtonE2" parent="." instance=ExtResource("4_yq2d0")]
offset_left = 700.0
offset_top = 730.0
offset_right = 1688.0
offset_bottom = 771.0
theme_override_font_sizes/font_size = 32
text = "Welp, that was a good workout, but I gotta get going, see you around (Leave)"

[connection signal="pressed" from="ChoiceButtonE1" to="." method="_on_choice_button_e_1_pressed"]
[connection signal="pressed" from="ChoiceButtonMO" to="." method="_on_choice_button_mo_pressed"]
[connection signal="pressed" from="ChoiceButtonE2" to="." method="_on_choice_button_e_2_pressed"]
